windows no longer are resiable or draggable on mobile (removes handles)

--- a/css/explorer.css
+++ b/css/explorer.css
@@ -163,10 +163,10 @@ td {
 
 @media only screen and (max-width: 768px) {
 	.window {
-		height: 100%;
-		width: 100%;
+		height: 100vh;
+		width: 100vw;
 
-		position: inline !important;
+		position: absolute !important;
 	}
 
 	.sidebar {
